<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">РФИ Демо</string>
    <string name="action_settings">Settings</string>
    <string name="label_cost">Сумма платежа:</string>
    <string name="label_name">Назначение платежа:</string>
    <string name="default_name">Тестирование сервиса</string>
    <string name="default_cost">15</string>
    <string name="label_phone">Номер телефона:</string>
    <string name="pay_button">Оплатить</string>
    <string name="label_status">Статус: </string>
    <string name="default_status">ожидание начала оплаты</string>
    <string name="label_payment_type">Способ оплаты: </string>
    <string name="label_payment_type_mc">телефон</string>
    <string name="label_payment_type_card">карта</string>
    <string name="label_new_payment">новый платеж</string>

    <string name="validation_error_title"></string>
    <string name="validation_error_name_is_empty">Поле назначение платежа обязательно</string>
    <string name="validation_error_cost_is_empty">Поле сумма платежа обязательно</string>

    <string name="label_card_limitation">Срок действия:</string>
    <string name="label_card_number">Номер карты:</string>
    <string name="label_card_holder">Владелец карты:</string>
    <string name="label_card_month">Месяц:</string>
    <string name="label_card_year">Год:</string>
    <string name="label_card_cvc">CVC:</string>

    <string name="status_start">Ожидание начала оплаты</string>
    <string name="status_created">Создана транзакция (%d)</string>
    <string name="status_waiting">Ожидание оплаты транзакции (%d)</string>
    <string name="status_cant_pay">не удалось оплатить транзакцию (%d)</string>
    <string name="status_paid">Транзакция (%d) оплачена</string>
    <string name="status_cant_init">Не удалось инициировать транзакцию</string>

    <string name="spg_acquire_url" formatted="false">https://secure.rficb.ru/acquire?sid=%d&amp;oid=%d&amp;op=pay</string>
    <string name="spg_test_acquire_url" formatted="false">https://test.rficb.ru/acquire?sid=%d&amp;oid=%d&amp;op=pay</string>
    <string name="payment_type_mc">mc</string>
    <string name="payment_type_card">spg_test</string>
    <integer name="check_timeout">3500</integer>

    <integer name="alba_service_id">МЕСТО ДЛЯ ID СЕРВИСА</integer>
    <string name="alba_key">МЕСТО ДЛЯ КЛЮЧА</string>

</resources>
