<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/main_activity">

    <TextView
        android:text="@string/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_name"
        android:layout_marginTop="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_below="@+id/label_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/pay_button"
        android:layout_alignEnd="@+id/pay_button"
        android:text="@string/default_name" />

    <TextView android:text="@string/label_cost" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_cost"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/cost"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/label_cost"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/default_cost" />

    <TextView
        android:text="@string/label_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/label_phone"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/cost"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/phone"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/label_phone"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/cost"
        android:layout_alignEnd="@+id/cost"
        android:selectAllOnFocus="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_status"
        android:id="@+id/label_status"
        android:layout_alignTop="@+id/status"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/default_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/status"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="4dp"
        android:layout_above="@+id/pay_button"
        android:layout_toRightOf="@+id/label_status"
        android:layout_toEndOf="@+id/label_status" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_button"
        android:id="@+id/pay_button"
        android:onClick="onClick"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"

        android:layout_alignParentStart="true" />

</RelativeLayout>
